Added more proper documentation
